# Cartograph

./: .clang-format  .gitignore  ARCHITECTURE.md  BUGFIX_NOTES.md  BUILDING.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTORS.md  Cartograph.entitlements  DESIGN_NOTES.md  DRAW_LIST_FIX.md  INTEGRATION_NOTES.md  LAYOUT_UPDATE.md  LICENSE  PAINTING_FIXES_SUMMARY.md  PAINT_FIXES_FINAL.md  PAINT_TOOL_FIXES.md  PAINT_TOOL_IMPLEMENTATION.md  PAINT_TOOL_QUICKSTART.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RENDERING_INTEGRATION_FIX.md  ROOM_AND_STATUS_FIXES.md  SUMMARY.md  THIRD_PARTY_NOTICES.md  WELCOME_FLOW_DIAGRAM.md  WELCOME_SCREEN_IMPLEMENTATION.md  WELCOME_SCREEN_QUICK_REFERENCE.md  WELCOME_SCREEN_TODOS.md  clean_ui.py  extract_canvas.py  imgui.ini  setup_deps.sh  update_refs.py
.github/workflows/: build.yml
assets/icons/: README.md
assets/project/: cartograph.icns
assets/tools/: README.md
cmake/: Info.plist.in
samples/: Castle-Bronte.cart  README.md  SOTN.cart
scripts/: codesign.sh  notarize.sh  setup_deps.ps1  setup_deps.sh
src/: App.cpp  App.h  Canvas.cpp  Canvas.h  Color.h  Config.h  ExportPng.cpp  ExportPng.h  History.cpp  History.h  IOJson.cpp  IOJson.h  Icons.cpp  Icons.h  Jobs.cpp  Jobs.h  Keymap.cpp  Keymap.h  Limits.h  Model.cpp  Model.h  Package.cpp  Package.h  Preferences.cpp  Preferences.h  ProjectFolder.cpp  ProjectFolder.h  Thumbnail.cpp  Thumbnail.h  UI.cpp  UI.h  main.cpp
src/Theme/: Themes.cpp  Themes.h
src/UI/: CanvasPanel.cpp  CanvasPanel.h  ImGuiHelpers.cpp  ImGuiHelpers.h  Modals.cpp  Modals.h  WelcomeScreen.cpp  WelcomeScreen.h
src/history/: AddPaletteColorCommand.cpp  AddPaletteColorCommand.h  Commands.h  Constants.h  CreateRegionCommand.cpp  CreateRegionCommand.h  CreateRoomCommand.cpp  CreateRoomCommand.h  DeleteIconCommand.cpp  DeleteIconCommand.h  DeleteMarkerCommand.cpp  DeleteMarkerCommand.h  DeleteRegionCommand.cpp  DeleteRegionCommand.h  DeleteRoomCommand.cpp  DeleteRoomCommand.h  DetectRoomsCommand.cpp  DetectRoomsCommand.h  FillTilesCommand.cpp  FillTilesCommand.h  History.cpp  History.h  ICommand.h  MarkerPropertiesSnapshot.h  ModifyEdgesCommand.cpp  ModifyEdgesCommand.h  ModifyMarkerPropertiesCommand.cpp  ModifyMarkerPropertiesCommand.h  ModifyRegionPropertiesCommand.cpp  ModifyRegionPropertiesCommand.h  ModifyRoomAssignmentsCommand.cpp  ModifyRoomAssignmentsCommand.h  ModifyRoomPropertiesCommand.cpp  ModifyRoomPropertiesCommand.h  MoveMarkersCommand.cpp  MoveMarkersCommand.h  PaintTilesCommand.cpp  PaintTilesCommand.h  PlaceMarkerCommand.cpp  PlaceMarkerCommand.h  (+8 more)
src/modals/: AboutWhatsNew.cpp  ConfirmationModals.cpp  IconMarkerModals.cpp  ModalTypes.h  Modals.cpp  Modals.h  ProjectModals.cpp  RebindModal.cpp  RoomRegionModals.cpp  SettingsExportModals.cpp
src/platform/: Fs.cpp  Fs.h  Fs_macos.mm  NativeMenu.cpp  NativeMenu.h  NativeMenu_imgui.cpp  NativeMenu_imgui.h  NativeMenu_macos.h  NativeMenu_macos.mm  Paths.cpp  Paths.h  System.cpp  System.h  Time.cpp  Time.h
src/platform/macos/: Fs.mm  NativeMenu.h  NativeMenu.mm
src/platform/windows/: Fs.cpp  app.rc
src/render/: GlRenderer.cpp  GlRenderer.h  GpuTexture.cpp  GpuTexture.h  Renderer.h  SdlGpuRenderer.cpp  SdlGpuRenderer.h
